--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <br>
     <img width=500px src="img/africa2.jpg">
     <br>
-    <h3>New commit in Africa</h3>
+    <h3>New commit in Africa 2</h3>
 </body>
 </html>
